# datafusion-ui

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
crates/sql-ide/: Cargo.toml
crates/sql-ide/src/: catalog.rs  complete.rs  diagnostics.rs  lex.rs  lib.rs
packaging/: README.md  datafusion-ui.desktop  datafusion-ui.xml
src/: config.rs  engine.rs  error.rs  explain.rs  explorer.rs  export.rs  format.rs  main.rs  parquet_io.rs  sqlide_highlight.rs  store.rs  theme.rs
src/app/: helpers.rs  message.rs  mod.rs  state.rs  view.rs
src/app/update/: conn_info.rs  explorer.rs  file.rs  flight.rs  grid.rs  mod.rs  settings.rs  sql.rs
src/flightsql/: mod.rs
src/views/: conn_info.rs  data.rs  explain.rs  mod.rs  overview.rs  row_groups.rs  settings.rs  sidebar.rs  sql.rs
src/widgets/: mod.rs  resize_handle.rs
src/wrangle/: insights.rs  mod.rs  naming.rs  session.rs
