[workspace]
members = ["crates/sql-ide"]
resolver = "3"

[workspace.package]
authors = ["Wyatt Herkamp <wherkamp@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/wyatt-herkamp/datafusion-ui"
rust-version = "1.95"

[workspace.dependencies]
sqlparser = "0.61"
sql-ide = { path = "crates/sql-ide" }

[package]
name = "datafusion-ui"
version = "0.1.0"
description = "A UI for viewing Parquet files and querying DataFusion / FlightSQL sources, built with Rust and Iced."
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
[dependencies]
sql-ide = { workspace = true }
arrow = { version = "58", features = ["chrono-tz"] }
datafusion = "53.1"
iced = { version = "0.14.0", features = ["tokio", "canvas", "advanced"] }
parquet = "58"
rfd = "0.17.2"
tokio = { version = "1.52.3", features = ["full"] }
ahash = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
arrow-flight = { version = "58", features = ["flight-sql-experimental"] }
tonic = "0.14"
futures = "0.3"
base64 = "0.22"
toml = "1.1.2"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2"
human-panic = "2.0"
clap = { version = "4.1", features = ["derive", "env"] }
dark-light = "2.0.0"
